Remove unnecessary plotter in SEA

--- a/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
+++ b/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
@@ -639,7 +639,7 @@
     "points_path = os.path.join(dir_path, \"training_points_\" + str(file_counter) + \".png\")\n",
     "points_plotter(points, save = True, file_path = points_path)\n",
     "scatter_fig_path = os.path.join(dir_path, \"loss_\" + str(file_counter) + \".png\")\n",
-    "plot_loss(train_losses, val_losses, log = True, save = True, file_path = scatter_fig_path)\n",
+    "plot_loss(train_losses, val_losses, log = False, save = True, file_path = scatter_fig_path)\n",
     "save_model(model, nn_filepath)\n",
     "print(nn_filepath)"
    ]
@@ -702,113 +702,6 @@
     "plot_dataloader = make_plot_dataloader(plot_dataset)\n",
     "plot_model_performance(model, plot_dataloader, folder_path)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e667f4a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "model_ana = autoencoders_SEA.Analytic_transformer(rp)\n",
-    "\n",
-    "\n",
-    "models = [model_ana, model_ana]\n",
-    "model_names = [\"Analytic\", \"Neural Network\"]\n",
-    "dir_path = os.path.join(os.getcwd(), \"Models\", \"Temp_delete_this\")\n",
-    "file_counter = 0\n",
-    "theta_xy_fig_path = os.path.join(dir_path, \"theta_vs_q\" + str(file_counter) + \".png\")\n",
-    "\n",
-    "def check_clockwise_vectorized(q):\n",
-    "\t\t\"\"\"\n",
-    "\t\tExpects q to be a tensor of shape (N,2) where each row is [q1, q2].\n",
-    "\t\tReturns two boolean masks: (cw_mask, ccw_mask), where:\n",
-    "\t\t\t- cw_mask[i] is True if the i-th configuration is elbow clockwise.\n",
-    "\t\t\t- ccw_mask[i] is True if the i-th configuration is elbow counterclockwise.\n",
-    "\t\t\n",
-    "\t\tThe logic is as follows (from your original function):\n",
-    "\t\t\tIf q1 lies between q0 and q0+π, or between q0-2π and q0-π, then the configuration\n",
-    "\t\t\tis considered counterclockwise. Otherwise it is clockwise.\n",
-    "\t\t\"\"\"\n",
-    "\t\tq0 = q[:, 0]\n",
-    "\t\tq1 = q[:, 1]\n",
-    "\t\tcond_ccw = ((q1 >= q0) & (q1 <= q0 + torch.pi))\n",
-    "\t\tcw_mask = ~cond_ccw\n",
-    "\t\tccw_mask = cond_ccw\n",
-    "\t\treturn cw_mask, ccw_mask\n",
-    "\n",
-    "\n",
-    "# Define the number of grid points along each dimension.\n",
-    "n_points = 200\n",
-    "\n",
-    "# Create 1D tensors for q0 and q1 in the range [-pi, 0]\n",
-    "q0_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
-    "q1_vals = torch.linspace(-np.pi, 2*np.pi, n_points)\n",
-    "\n",
-    "# Create a 2D grid (meshgrid) of q values.\n",
-    "# (Note: using indexing='ij' so that the first axis corresponds to q0 and the second to q1)\n",
-    "q0_grid, q1_grid = torch.meshgrid(q0_vals, q1_vals, indexing='ij')\n",
-    "\n",
-    "# Stack the grid to get a tensor of shape (n_points*n_points, 2)\n",
-    "q_grid = torch.stack([q0_grid.flatten(), q1_grid.flatten()], dim=1).to(device)\n",
-    "\n",
-    "# === Compute theta1 and theta2 using the analytic encoder functions ===\n",
-    "# We use torch.vmap to evaluate the functions over the batch of q values.\n",
-    "# Note: encoder_theta_0_ana and encoder_theta_1_ana each return a tuple (theta, theta).\n",
-    "\n",
-    "\n",
-    "fig, axes = plt.subplots(2, 2, figsize=(10, 8.5))\n",
-    "for i, (model, model_name) in enumerate(zip(models, model_names)):\n",
-    "\n",
-    "\t\ttheta_out = model.encoder_vmap(q_grid)\n",
-    "\t\t#theta_out = torch.vmap(model.encoder)(q_grid)\n",
-    "\n",
-    "\t\ttheta0 = theta_out[:, 0]\n",
-    "\t\ttheta1 = theta_out[:, 1]\n",
-    "\n",
-    "\t\t# Since q0_grid and q1_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
-    "\t\tx_end = rp[\"l0\"] * torch.cos(q_grid[:, 0]) + rp[\"l1\"] * torch.cos(q_grid[:, 1])\n",
-    "\t\ty_end = rp[\"l0\"] * torch.sin(q_grid[:, 0]) + rp[\"l1\"] * torch.sin(q_grid[:, 1])\n",
-    "\n",
-    "\t\t# --- Determine configuration (clockwise vs. counterclockwise) for each q ---\n",
-    "\t\tcw_mask, ccw_mask = check_clockwise_vectorized(q_grid)\n",
-    "\t\t# Counterclockwise points\n",
-    "\t\tx_end_ccw   = x_end[ccw_mask].detach().cpu().numpy()\n",
-    "\t\ty_end_ccw   = y_end[ccw_mask].detach().cpu().numpy()\n",
-    "\t\ttheta0_ccw  = theta0[ccw_mask].detach().cpu().numpy()\n",
-    "\t\ttheta1_ccw  = theta1[ccw_mask].detach().cpu().numpy()\n",
-    "\t\tthetas = [theta0_ccw, theta1_ccw]\n",
-    "\n",
-    "\n",
-    "\t\tfor j in range(2):\n",
-    "\t\t\t\tsc = axes[i, j].scatter(x_end_ccw, y_end_ccw, c=thetas[j], cmap='viridis', s=5)\n",
-    "\t\t\t\taxes[i, j].set_title(\"th_\" + str(j) + \" - \" + model_names[i])\n",
-    "\t\t\t\taxes[i, j].set_xlabel(\"x\")\n",
-    "\t\t\t\taxes[i, j].set_ylabel(\"y\")\n",
-    "\t\t\t\tplt.colorbar(sc, ax=axes[i, j])\n",
-    "\n",
-    "\n",
-    "\t\t#sc4 = axes[1].scatter(x_end_ccw, y_end_ccw, c=theta2_ccw, cmap='viridis', s=5)\n",
-    "\t\t#axes[1].set_title(\"Theta1 - Counterclockwise\")\n",
-    "\t\t#axes[1].set_xlabel(\"x\")\n",
-    "\t\t#axes[1].set_ylabel(\"y\")\n",
-    "\t\t#plt.colorbar(sc4, ax=axes[1])\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(theta_xy_fig_path)\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86c46fd3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
