--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "rp = robot_parameters.LUMPED_PARAMETERS\n",
     "plotter = pendulum_plot.Anim_plotter(rp)\n",
-    "neural_net = False\n",
+    "neural_net = True\n",
     "\n",
     "fix_q = True\n",
     "model_cw = False\n",
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xy_start = torch.tensor([1., -4.]).requires_grad_().to(device)\n",
+    "xy_start = torch.tensor([0., -2.]).requires_grad_().to(device)\n",
     "q_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
@@ -146,7 +146,7 @@
     "\n",
     "\n",
     "dt = 0.01\n",
-    "t_end = 1.5\n",
+    "t_end = 15\n",
     "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
     "th = th_start\n",
