Change logging of sim in q space

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -263,16 +263,13 @@
    "source": [
     "xy_real_series = torch.empty((0,2)).to(device)\n",
     "xy_est_series = torch.empty((0,2)).to(device)\n",
-    "xy_naive_series = torch.empty((0,2)).to(device)\n",
     "\n",
     "#for q_real, q_est, q_naive in zip(q_real_series, q_est_series, q_naive_series):\n",
     "for q_real, q_est in zip(q_real_series, q_est_series):\n",
-    "    xy_real, _ = transforms.forward_kinematics(rp, q_real)\n",
-    "    xy_real_series = torch.cat((xy_real_series, xy_real.unsqueeze(0)))\n",
-    "    xy_est, _ = transforms.forward_kinematics(rp, q_est)\n",
-    "    xy_est_series = torch.cat((xy_est_series, xy_est.unsqueeze(0)))\n",
-    "    #xy_naive, _ = transforms.forward_kinematics(rp, q_naive)\n",
-    "    #xy_naive_series = torch.cat((xy_naive_series, xy_naive.unsqueeze(0)))\n"
+    "\txy_real, _ = transforms.forward_kinematics(rp, q_real)\n",
+    "\txy_real_series = torch.cat((xy_real_series, xy_real.unsqueeze(0)))\n",
+    "\txy_est, _ = transforms.forward_kinematics(rp, q_est)\n",
+    "\txy_est_series = torch.cat((xy_est_series, xy_est.unsqueeze(0)))"
    ]
   },
   {
