Overhaul naive sim to plot for many Kp, Kd. Used to find optimal gains

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -483,29 +483,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Kp_naive = torch.tensor([[100., 0.], [0., 100.]]).to(device)\n",
-    "Kd_naive = torch.tensor([[40., 0.], [0., 40.]]).to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q_naive_series, q_d_naive_series, q_dd_naive_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "def sim_naive(Kp_naive, Kd_naive):\n",
     "\n",
+    "\tq_naive_series, q_d_naive_series, q_dd_naive_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "\tth_naive_series, th_d_naive_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "\tu_naive_series = torch.empty((0,1)).to(device)\n",
     "\n",
-    "dt = 0.01\n",
-    "t_end = 15\n",
-    "t_series = torch.arange(0, 15, 0.01)\n",
+    "\tdt = 0.01\n",
+    "\tt_end = 3\n",
+    "\tt_series = torch.arange(0, 15, 0.01)\n",
     "\n",
     "\tq_naive, q_d_naive, q_dd_naive = q_start, q_d_start, q_dd_start\n",
     "\n",
     "\tis_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
-    "for t in torch.arange(0, t_end, dt):\n",
-    "    print(\"Time:\", t.item().__round__(3))\n",
+    "\tfor t in torch.arange(0, t_end, dt):\n",
+    "\t\tprint(\"Time:\", t.item().__round__(3))\n",
     "\n",
     "\t\t\n",
     "\t\tq = q_naive\n",
@@ -515,26 +508,33 @@
     "\t\tA_q = dynamics.input_matrix(rp, q.squeeze(0))\n",
     "\n",
     "\n",
-    "    u = torch.pinverse(A_q) @ ((Kp_naive @ (q_des - q).T + Kd_naive @ (q_d_des - q_d).T))     \n",
-    "    u = u + torch.pinverse(A_q) @ G_q\n",
-    "    print(\"u:\", u)\n",
+    "\t\tu = torch.pinverse(A_q) @ ((Kp_naive @ (q_des - q).T + Kd_naive @ (q_d_des - q_d).T))     \n",
+    "\t\tu = u + torch.pinverse(A_q) @ G_q\n",
     "\n",
-    "    tau_q = A_q * u\n",
+    "\t\ttau_q = A_q * u\n",
     "\n",
-    "    q_dd_naive = (torch.pinverse(M_q) @ (tau_q - C_q @ ((q_d).T) - G_q)).T \n",
+    "\t\tq_dd_naive = (torch.pinverse(M_q) @ (tau_q - C_q @ ((q_d).T) - G_q)).T \n",
+    "\t\tq_d_naive = q_d_naive + q_dd_naive * dt\n",
+    "\t\tq_naive = q_naive + q_d_naive * dt\n",
+    "\t\tq_naive = transforms.wrap_to_pi(q_naive)\n",
     "\n",
-    "    \n",
-    "    q_d_naive = q_d_naive + q_dd_naive * dt\n",
-    "    q_naive = q_naive + q_d_naive * dt\n",
-    "    q_naive = transforms.wrap_to_pi(q_naive)\n",
+    "\t\tth_naive = transforms.analytic_theta(rp, q_naive.squeeze(0))\n",
+    "\t\t#theta_partial = partial(transforms.analytic_theta, rp)\n",
+    "\t\t#jacobian_fn = torch.func.jacfwd(theta_partial, has_aux=False)\n",
+    "\t\t#J_naive = jacobian_fn(q_naive.squeeze(0)).float()\n",
+    "\t\t#th_d_naive = (J_naive @ q_d_naive.T).T\n",
     "\n",
-    "    \"\"\" Store data for plotting \"\"\"\n",
-    "  \n",
-    "    q_naive_series = torch.cat((q_naive_series, q_naive.detach()), dim=0)\n",
-    "    q_d_naive_series = torch.cat((q_d_naive_series, q_d_naive.detach()), dim=0)\n",
-    "    q_dd_naive_series = torch.cat((q_dd_naive_series, q_dd_naive.detach()), dim=0)\n",
-    "    \n",
-    "    \n"
+    "\t\t\"\"\" Store data for plotting \"\"\"\n",
+    "\t\n",
+    "\t\tu_naive_series = torch.cat((u_naive_series, u.detach()), dim=0)\n",
+    "\t\tq_naive_series = torch.cat((q_naive_series, q_naive.detach()), dim=0)\n",
+    "\t\tq_d_naive_series = torch.cat((q_d_naive_series, q_d_naive.detach()), dim=0)\n",
+    "\t\tq_dd_naive_series = torch.cat((q_dd_naive_series, q_dd_naive.detach()), dim=0)\n",
+    "\t\t\n",
+    "\t\tth_naive_series = torch.cat((th_naive_series, th_naive.unsqueeze(0).detach()), dim=0)\n",
+    "\t\t#th_d_naive_series = torch.cat((th_d_naive_series, th_d_naive.detach()), dim=0)\n",
+    "\t\n",
+    "\treturn((q_naive_series, q_d_naive_series, q_dd_naive_series, th_naive_series, th_d_naive_series, u_naive_series), dt, t_end)"
    ]
   },
   {
@@ -542,7 +542,112 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def naive_to_xy(q_naive_series):\n",
+    "\txy_naive_series = torch.empty((0,2)).to(device)\n",
+    "\n",
+    "\t#for q_real, q_est, q_naive in zip(q_real_series, q_est_series, q_naive_series):\n",
+    "\tfor q_naive in q_naive_series:\n",
+    "\t\txy_naive, _ = transforms.forward_kinematics(rp, q_naive.squeeze(0))\n",
+    "\t\txy_naive_series = torch.cat((xy_naive_series, xy_naive.unsqueeze(0)))\n",
+    "\n",
+    "\treturn (xy_naive_series)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_naive(Kp_naive, Kd_naive, q_naive_series, th_naive_series, xy_naive_series, u_naive_series, dt, t_end):\n",
+    "\n",
+    "\tdatasets_q = [\n",
+    "\t\t{\n",
+    "\t\t\t\"name\": \"naive\",\n",
+    "\t\t\t\"values\": q_naive_series.cpu().detach().numpy(),\n",
+    "\t\t\t\"color\": \"tab:green\"\n",
+    "\t\t}\n",
+    "\t]\n",
+    "\tdatasets_th = [\n",
+    "\t\t{\n",
+    "\t\t\t\"name\": \"naive\",\n",
+    "\t\t\t\"values\": th_naive_series.cpu().detach().numpy(),\n",
+    "\t\t\t\"color\": \"tab:orange\"\n",
+    "\t\t}\n",
+    "\t]\n",
+    "\n",
+    "\tdatasets_xy = [\n",
+    "\t\t{\n",
+    "\t\t\t\"name\": \"naive\",\n",
+    "\t\t\t\"values\": xy_naive_series.cpu().detach().numpy(),\n",
+    "\t\t\t\"color\": \"tab:green\"\n",
+    "\t\t}\n",
+    "\t]\n",
+    "\n",
+    "\tdatasets_u = [\n",
+    "\t\t{\n",
+    "\t\t\t\"name\": \"naive\",\n",
+    "\t\t\t\"values\": u_naive_series.cpu().detach().numpy(),\n",
+    "\t\t\t\"color\": \"tab:orange\"\n",
+    "\t\t}\n",
+    "\t]\n",
+    "\n",
+    "\t# Common labels for the plots.\n",
+    "\tname_q = \"q trajectory\"\n",
+    "\tname_th = \"th trajectory\"\n",
+    "\tname_xy = \"xy trajectory\"\n",
+    "\tt_series = torch.arange(0, t_end, dt)\n",
+    "\n",
+    "\t# Create an instance of ErrorPlotter.\n",
+    "\tep = pendulum_plot.Error_plotter(rp)\n",
+    "\n",
+    "\t# Prepare plot datasets for each column.\n",
+    "\t# Each call groups a set of datasets to be drawn in one subplot column.\n",
+    "\tcolumn1 = ep.create_plot_dataset(t=t_series, datasets=datasets_q, reference=q_des, name=name_q)\n",
+    "\tcolumn2 = ep.create_plot_dataset(t=t_series, datasets=datasets_th, reference=th_des, name=name_th)\n",
+    "\tcolumn3 = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=xy_des_real.unsqueeze(0), name=name_xy)\n",
+    "\tplot_datasets = [column1, column2, column3]\n",
+    "\n",
+    "\tprint(column1[\"x\"].size())\n",
+    "\n",
+    "\tfile_name = \"Error plot naive \" + str(round(Kp_naive[0,0].item())) + \"_\" + str(round(Kd_naive[0,0].item())) + \".png\"\n",
+    "\tprint(file_name)\n",
+    "\tfile_counter = 0\n",
+    "\n",
+    "\toutput_path = os.path.join(save_dir, file_name)\n",
+    "\n",
+    "\t# Pass the list of columns (plot_dataset objects) to plot_multi.\n",
+    "\tep.plot_multi(plot_datasets=plot_datasets, save_path=output_path, axes_names = [\"q\", \"th\", \"xy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_dir = f\"collocated_results/sim_naive_b\"\n",
+    "for Kp_val in range(80, 90, 10):\n",
+    "\tfor Kd_val in range(90, 100, 10):\t\n",
+    "\t\tprint(\"Simulating. Kp =\", Kp_val, \", Kd =\", Kd_val)\n",
+    "\t\tKp_naive = torch.tensor([[Kp_val, 0.], [0., Kp_val]]).to(device)\n",
+    "\t\tKd_naive = torch.tensor([[Kd_val, 0.], [0., Kd_val]]).to(device)\n",
+    "\t\tseries_tuple, dt, t_end = sim_naive(Kp_naive, Kd_naive)\n",
+    "\t\tq_naive_series, q_d_naive_series, q_dd_naive_series, th_naive_series, th_d_naive_series, u_naive_series = series_tuple\n",
+    "\t\txy_naive_series = naive_to_xy(q_naive_series)\n",
+    "\t\tplot_naive(Kp_naive, Kd_naive, q_naive_series, th_naive_series, xy_naive_series, u_naive_series, dt, t_end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OPTIMAL GAINS FOR NAIVE CONTROLLER ARE Kp = 90, Kd = 90"
+   ]
   }
  ],
  "metadata": {
