--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -210,7 +210,7 @@
    "source": [
     "import torch.nn.functional as F\n",
     "\n",
-    "f_recon        = 10.\n",
+    "f_recon        = 4.\n",
     "f_J_eye \t   = 1.\n",
     "\n",
     "f_diag         = 1. \n",
@@ -357,11 +357,6 @@
     "\tExecutes training loop for autoencoder\n",
     "\t\"\"\"\n",
     "\n",
-    "\n",
-    "\t# Set-up for Gradnorm learning of weights\n",
-    "\tn_tasks = 7\n",
-    "\tloss_weights = nn.Parameter(torch.ones(n_tasks, device=device), requires_grad=True)\n",
-    "\n",
     "\tmodel, file_counter, dir_name = load_model(current_time, num_epochs, lr, dir_name)\n",
     "\n",
     "\toptimizer = torch.optim.Adam(model.parameters(), lr=lr)#,  weight_decay=1e-6)\n",
@@ -451,6 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0b9817f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,14 +669,10 @@
     "\n",
     "folder_path = os.path.join(dir_path, \"performance_plots_\" + str(file_counter))\n",
     "\n",
-    "#q0_split = (-torch.pi, torch.pi)\n",
     "plt.ion()\n",
-    "#model = autoencoders.Autoencoder_double(rp).to(device)\n",
-    "#model_location = 'Models/Split_AEs/Lumped_Mass_202503051257.pth'\n",
-    "#model.load_state_dict(torch.load(model_location, weights_only=True))\n",
     "plot_points = mask_points(q0_split, clockwise = train_clockwise)\n",
     "plot_dataset = make_dataset(plot_points)\n",
-    "plot_dataloader = make_plot_dataloader(plot_dataset)\n",
+    "plot_dataloader = make_plot_dataloader(plot_dataset, stride = 10)\n",
     "plot_model_performance(model, plot_dataloader, folder_path)\n"
    ]
   },
@@ -694,14 +686,11 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "model = autoencoders.Autoencoder_double(rp).to(device)  # Initialize model architecture\n",
-    "model.load_state_dict(torch.load(\"Models/NN_202505141642/NN_202505141642_0.pth\", weights_only=True, map_location=device))  # Load weights\n",
     "#\"Models\", dir_name, dir_name + \"_\" + str(file_counter-1) + \".pth\")\n",
     "model_ana = autoencoders.Analytic_transformer(rp)\n",
     "\n",
     "models = [model_ana, model]\n",
     "model_names = [\"Analytic\", \"Neural Network\"]\n",
-    "dir_path = os.path.join(os.getcwd(), \"Models\", \"NN_202505141642\")\n",
     "dir_path = dir_path\n",
     "file_counter = 0\n",
     "\n",
