Add stride to make_plot_dataloader

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -494,7 +494,7 @@
    "source": [
     "import Plotting.plotters_simple as plotters_simple\n",
     "\n",
-    "def make_plot_dataloader(dataset):\n",
+    "def make_plot_dataloader(dataset, stride = 1):\n",
     "\n",
     "\t\"\"\"\n",
     "\tTakes the training dataset and returns a dataloader of every 10th point\n",
@@ -503,9 +503,9 @@
     "\n",
     "\tpoints_tensor, mass_matrices_tensor, input_matrices_tensor = dataset.tensors\n",
     "\t\n",
-    "\tplot_sampled = points_tensor[::10]\n",
-    "\tmass_sampled = mass_matrices_tensor[::10]\n",
-    "\tinput_sampled = input_matrices_tensor[::10]\n",
+    "\tplot_sampled = points_tensor[::stride]\n",
+    "\tmass_sampled = mass_matrices_tensor[::stride]\n",
+    "\tinput_sampled = input_matrices_tensor[::stride]\n",
     "\n",
     "\tplot_dataset = TensorDataset(plot_sampled, mass_sampled, input_sampled)\n",
     "\tplot_dataloader = DataLoader(plot_dataset, batch_size=len(plot_dataset), shuffle=False, num_workers=0)\n",
