Define test values to evaluate performance

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -585,7 +585,7 @@
     "train_part = 0.7\n",
     "\n",
     "rp = robot_parameters.LUMPED_PARAMETERS\n",
-    "num_epochs = 5001\n",
+    "num_epochs = 3001\n",
     "lr = 1e-3\n",
     "\n",
     "# IMPORTANT:\n",
@@ -656,6 +656,77 @@
     "th_plotter.make_figure(theta_figure_path)\n",
     "theta_anim_path = os.path.join(dir_path, \"theta_mapping_\" + str(file_counter) + \".mp4\")\n",
     "#th_plotter.make_animation(theta_anim_path, duration = 4, fps = 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5dbfeb1",
+   "metadata": {},
+   "source": [
+    "#### Learned coordinate performance analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "618954be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_points = mask_points(q0_split)\n",
+    "test_dataset = make_dataset(test_points)\n",
+    "test_dataloader = make_plot_dataloader(test_dataset, stride=10)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "\tfor (q_test, M_q_test, A_q_test) in test_dataloader:\n",
+    "\t\tq_test = q_test.to(device)\n",
+    "\t\tM_q_test = M_q_test.to(device)\n",
+    "\t\tA_q_test = A_q_test.to(device)\n",
+    "\n",
+    "\t\ttheta_test, J_h_test, q_hat_test, J_h_dec_test, J_h_ana_test = model(q_test)\n",
+    "\t\ttheta_ana_test = model.theta_ana(q_test)\n",
+    "\t\tJ_h_trans_test = torch.transpose(J_h_test, 1, 2)\n",
+    "\t\tJ_h_inv_test = J_h_dec_test\n",
+    "\t\tJ_h_inv_trans_test = torch.transpose(J_h_inv_test, 1, 2)\n",
+    "\n",
+    "\t\tJ_h_inv_ana_test = torch.linalg.inv(J_h_ana_test)\n",
+    "\t\tJ_h_inv_trans_ana_test = torch.transpose(J_h_inv_ana_test, 1, 2)\n",
+    "\n",
+    "\t\tM_th_test = J_h_inv_trans_test @ M_q_test @ J_h_inv_test\n",
+    "\t\tA_th_test = (J_h_inv_trans_test @ A_q_test).squeeze(-1)\n",
+    "\n",
+    "\t\tM_th_ana_test = J_h_inv_trans_ana_test @ M_q_test @ J_h_inv_ana_test\n",
+    "\t\tA_th_ana_test = (J_h_inv_trans_ana_test @ A_q_test).squeeze(-1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab765424",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_A_th = F.mse_loss(A_th_test, A_th_ana_test)\n",
+    "diag_values_test = torch.diagonal(M_th_test, dim1=1, dim2=2)\n",
+    "mse_M_th_dia = torch.mean((-1 + torch.exp(-(diag_values_test - 1))) * (diag_values_test < 1).float())\n",
+    "mse_M_th_off_dia = F.mse_loss(M_th_test[:, 0, 1], torch.tensor(0.).repeat(M_th_test.size(0)).to(device))\n",
+    "mse_M_th = mse_M_th_dia + mse_M_th_off_dia\n",
+    "mse_recon = F.mse_loss(q_hat_test, q_test)\n",
+    "mse_J_eye = F.mse_loss(J_h_test @ J_h_dec_test, torch.eye(2).repeat(J_h_test.size(0), 1, 1).to(device))\n",
+    "print(\"MSE A_th  loss:\", mse_A_th.item())\n",
+    "print(\"MSE M_th  loss:\", mse_M_th.item())\n",
+    "print(\"MSE recon loss:\", mse_recon.item())\n",
+    "print(\"MSE J_eye loss:\", mse_J_eye.item())\n",
+    "mse_total = mse_A_th + mse_M_th + mse_recon + mse_J_eye\n",
+    "print(\"MSE total loss:\", mse_total.item())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30c74579",
+   "metadata": {},
+   "source": [
+    "#### Learned coordinate performance plotting"
    ]
   },
   {
