Rework alpha, beta plot to range over stiffness

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -786,31 +786,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_th_0_min, plot_th_0_max = 1, 4\n",
-    "plot_th_1_min, plot_th_1_max = 1., 1.7\n",
+    "plot_th_0_min, plot_th_0_max = 1, 10\n",
+    "plot_th_1_min, plot_th_1_max = 0.5, 2\n",
     "\n",
-    "plot_th_d_0_min, plot_th_d_0_max = -2.856884479522705, -2.856884479522705 + 0.1\n",
-    "plot_th_d_1_min, plot_th_d_1_max = -0.009881085716187954, -0.009881085716187954 + 0.1\n",
+    "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 15).unsqueeze(1).to(device)\n",
+    "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 15).unsqueeze(1).to(device)\n",
     "\n",
-    "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 20).unsqueeze(1).to(device)\n",
-    "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 20).unsqueeze(1).to(device)\n",
-    "#th_plot_range = torch.cat((th_0_range, th_1_range), dim=1)\n",
+    "th_d_plot = torch.tensor([[1.], [1.]]).to(device).unsqueeze(0).requires_grad_()\n",
     "\n",
-    "th_d_0_range = torch.linspace(plot_th_d_0_min, plot_th_d_0_max, 1).unsqueeze(1).to(device)\n",
-    "th_d_1_range = torch.linspace(plot_th_d_1_min, plot_th_d_1_max, 1).unsqueeze(1).to(device)\n",
+    "#k0_range = torch.tensor([[0.], [1.], [10.], [100.]]).to(device)\n",
+    "#k1_range = torch.tensor([[0.], [1.], [10.], [100.]]).to(device)\n",
     "\n",
+    "k0_range = torch.tensor([[-10.], [10.]]).to(device)\n",
+    "k1_range = torch.tensor([[-10.], [10.]]).to(device)\n",
     "\n",
-    "alphas = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
-    "                     len(th_0_range),   len(th_1_range),\n",
-    "                     device='cpu')  # move final values to CPU for plotting)\n",
+    "alphas = torch.ones(len(k0_range), len(k1_range),\n",
+    "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
+    "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)\n",
     "\n",
-    "betas = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
-    "                     len(th_0_range),   len(th_1_range),\n",
-    "                     device='cpu')  # move final values to CPU for plotting)\n",
+    "betas = torch.ones(len(k0_range), len(k1_range),\n",
+    "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
+    "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)\n",
     "\n",
-    "insides = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
-    "                     len(th_0_range),   len(th_1_range),\n",
-    "                     device='cpu')  # move final values to CPU for plotting)"
+    "insides = torch.ones(len(k0_range), len(k1_range),\n",
+    "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
+    "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)"
    ]
   },
   {
