Rework calc loop for efficiency

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -820,36 +820,45 @@
    "outputs": [],
    "source": [
     "\n",
-    "for i, th_d_0 in enumerate(th_d_0_range):\n",
-    "    for j, th_d_1 in enumerate(th_d_1_range):\n",
-    "        for k, th_0 in enumerate(th_0_range):\n",
-    "            for l, th_1 in enumerate(th_1_range):\n",
-    "                is_clockwise_plot = False\n",
-    "                q_plot = transforms.analytic_inverse(rp, torch.tensor([th_0, th_1]))[0]\n",
-    "                th_plot = torch.cat((th_0, th_1), dim=0).unsqueeze(0).requires_grad_()\n",
-    "                th_d_plot = torch.cat((th_d_0, th_d_1), dim=0).unsqueeze(0).requires_grad_()\n",
     "\n",
-    "                q_hat_plot = model.decoder_vmap(th_plot, is_clockwise_plot)\n",
-    "                q_d_hat_plot = (model.jacobian_dec(th_plot, clockwise=is_clockwise_plot) @ th_d_plot.T).T\n",
     "\n",
-    "                J_h_inv_plot = model.jacobian_dec(th_plot, is_clockwise_plot).squeeze(0)\n",
-    "                J_h_inv_trans_plot = torch.transpose(J_h_inv_plot, 0, 1)\n",
+    "for k, th_0 in enumerate(th_0_range):\n",
+    "\tfor l, th_1 in enumerate(th_1_range):\n",
+    "\t\tif l == 0:\n",
+    "\t\t\tprint(\"th_0:\", th_0.item(), \"   th_1:\", th_1.item())\n",
     "\n",
-    "                M_q_plot, C_q_plot, G_q_plot = dynamics.dynamical_matrices(rp, q_hat_plot.squeeze(0), q_d_hat_plot.squeeze(0))\n",
-    "                A_q_plot = dynamics.input_matrix(rp, q_hat_plot.squeeze(0))\n",
-    "                G_q_plot = dynamics.add_spring_force_G_q(rp, q_hat_plot, G_q_plot, k_spring)\n",
-    "                G_th_plot = J_h_inv_trans_plot @ G_q_plot\n",
-    "                M_th_plot = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
-    "                M_th_plot = M_th_plot * th_plot/th_plot   \n",
-    "                A_th_plot = transforms.transform_input_matrix_from_inverse_trans(A_q_plot, J_h_inv_trans_plot)\n",
+    "\t\tis_clockwise_plot = False\n",
+    "\t\tq_plot = transforms.analytic_inverse(rp, torch.tensor([th_0, th_1]))[0]\n",
+    "\t\tth_plot = torch.cat((th_0, th_1), dim=0).unsqueeze(0).requires_grad_()\n",
+    "\t\t\n",
     "\n",
-    "                Y_plot = normal_form.calculate_Y(th_plot, th_d_plot, M_th_plot, G_th_plot, device)\n",
-    "                #alpha_plot, beta_plot = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
-    "                alpha, beta = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
-    "                alphas[i, j, k, l] = alpha.item()  \n",
-    "                betas[i, j, k, l] = beta.item()\n",
-    "                if torch.isnan(q_plot[0]):\n",
-    "                    insides[i, j, k, l] = 0.\n"
+    "\t\tq_hat_plot = model.decoder_vmap(th_plot, is_clockwise_plot)\n",
+    "\t\tq_d_hat_plot = (model.jacobian_dec(th_plot, clockwise=is_clockwise_plot) @ th_d_plot.T).T\n",
+    "\n",
+    "\t\tJ_h_inv_plot = model.jacobian_dec(th_plot, is_clockwise_plot).squeeze(0)\n",
+    "\t\tJ_h_inv_trans_plot = torch.transpose(J_h_inv_plot, 0, 1)\n",
+    "\n",
+    "\t\tM_q_plot, C_q_plot, G_q_plot = dynamics.dynamical_matrices(rp, q_hat_plot.squeeze(0), q_d_hat_plot.squeeze(0))\n",
+    "\t\tA_q_plot = dynamics.input_matrix(rp, q_hat_plot.squeeze(0))\n",
+    "\n",
+    "\t\tfor i, k0 in enumerate(k0_range):\n",
+    "\t\t\tfor j, k1 in enumerate(k1_range):\n",
+    "\t\t\t\t\t\n",
+    "\t\t\t\t\tk_spring_plot = [k0, k1]\n",
+    "\n",
+    "\t\t\t\t\tG_q_plot = dynamics.add_spring_force_G_q(rp, q_hat_plot, G_q_plot, k_spring_plot)\n",
+    "\t\t\t\t\tG_th_plot = J_h_inv_trans_plot @ G_q_plot\n",
+    "\t\t\t\t\tM_th_plot = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
+    "\t\t\t\t\tM_th_plot = M_th_plot * th_plot/th_plot   \n",
+    "\t\t\t\t\tA_th_plot = transforms.transform_input_matrix_from_inverse_trans(A_q_plot, J_h_inv_trans_plot)\n",
+    "\n",
+    "\t\t\t\t\tY_plot = normal_form.calculate_Y(th_plot, th_d_plot, M_th_plot, G_th_plot, device)\n",
+    "\t\t\t\t\t#alpha_plot, beta_plot = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
+    "\t\t\t\t\talpha, beta = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
+    "\t\t\t\t\talphas[i, j, k, l] = alpha.item()  \n",
+    "\t\t\t\t\tbetas[i, j, k, l] = beta.item()\n",
+    "\t\t\t\t\tif torch.isnan(q_plot[0]):\n",
+    "\t\t\t\t\t\tinsides[i, j, k, l] = 0.\n"
    ]
   },
   {
