Clamp alpha, beta for plotting

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -873,6 +873,9 @@
     "\n",
     "T0, T1 = torch.meshgrid(th0_vals, th1_vals, indexing='ij')\n",
     "\n",
+    "alphas_plot = torch.clamp(alphas, -100, 100)\n",
+    "betas_plot = torch.clamp(betas, -3, 3)\n",
+    "\n",
     "outputs = {\n",
     "\t\"alphas\": alphas_plot,\n",
     "\t\"betas\": betas_plot,\n",
