--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -882,70 +882,76 @@
     "\t#\"insides\": insides\n",
     "}\n",
     "\n",
-    "if th_d_0_range.size()[0]> 1:\n",
     "\n",
-    "    fig, axes = plt.subplots(\n",
-    "        nrows=len(th_d_0_range),\n",
-    "        ncols=len(th_d_1_range),\n",
-    "        figsize=(12, 12),\n",
-    "        sharex=True, sharey=True\n",
-    "    )\n",
-    "    for i, thd0 in enumerate(th_d_0_range.cpu().numpy()):\n",
-    "        for j, thd1 in enumerate(th_d_1_range.cpu().numpy()):\n",
-    "            ax = axes[i, j]\n",
-    "            A_flat = alphas[i, j].reshape(-1)\n",
-    "            sc = ax.scatter(\n",
-    "                T0.reshape(-1),\n",
-    "                T1.reshape(-1),\n",
-    "                c=A_flat,\n",
-    "                s=100,\n",
-    "                cmap='viridis'\n",
-    "            )\n",
+    "n = len(outputs)\n",
     "\n",
-    "            cbar = fig.colorbar(sc, ax=ax)\n",
     "\n",
-    "            ax.set_title(f\"th'0={thd0.item():.2f}, th'1={thd1.item():.2f}\")\n",
-    "            if i == len(th_d_0_range) - 1:\n",
-    "                ax.set_xlabel(\"th0\")\n",
-    "            if j == 0:\n",
-    "                ax.set_ylabel(\"th1\")\n",
-    "else:\n",
-    "    for key, value in outputs.items():\n",
-    "        thd0 = th_d_0_range.cpu().numpy().item()\n",
-    "        thd1 = th_d_1_range.cpu().numpy().item()\n",
     "\n",
-    "        # output will be shape (1,1, H, W) so squeeze off the first two dims\n",
-    "        A_single = value.squeeze()      # now shape (H, W)\n",
-    "        A_flat   = A_single.reshape(-1)  # flatten to (H*W,)\n",
+    "for i, k0 in enumerate(k0_range):\n",
+    "\tfor j, k1 in enumerate(k1_range):\n",
     "\n",
-    "        norm = TwoSlopeNorm(vmin=A_flat.min(),\n",
-    "                            vcenter=0,\n",
-    "                            vmax=A_flat.max())\n",
-    "        \n",
-    "        print(A_flat.min())\n",
-    "        print(A_flat.max())\n",
+    "\t\tfig, axes = plt.subplots(1, n, figsize=(4*n,4))\n",
     "\n",
-    "        # make the plot\n",
-    "        fig, ax = plt.subplots(figsize=(6,6))\n",
-    "        sc = ax.scatter(\n",
-    "            T0.reshape(-1),\n",
-    "            T1.reshape(-1),\n",
-    "            c=-A_flat,\n",
-    "            s=100,\n",
-    "            cmap='Spectral',\n",
-    "            norm = norm\n",
-    "        )\n",
-    "        # add colorbar\n",
-    "        cbar = fig.colorbar(sc, ax=ax)\n",
+    "\t\tfor (key, value), ax in zip(outputs.items(), axes):\n",
+    "\t\t\tA_single = value[i, j]\n",
+    "\t\t\tA_flat   = A_single.reshape(-1)  # flatten to (H*W,)\n",
+    "\t\t\tAmax = A_flat.masked_fill(torch.isnan(A_flat), -float('inf')).max()\n",
+    "\t\t\tAmin = A_flat.masked_fill(torch.isnan(A_flat), float('inf')).min()\n",
+    "\t\t\tprint(\"Amax:\", Amax)\n",
+    "\t\t\tprint(\"Amin:\", Amin)\n",
+    "\t\t\tmaxvalue = torch.max(torch.tensor([-Amin, Amax]))\n",
+    "\t\t\tprint(\"maxvalue:\", maxvalue)\n",
+    "\t\t\tif key == \"alphass\" or key == \"betass\":\n",
+    "\t\t\t\tnorm = TwoSlopeNorm(vmin=-maxvalue,\n",
+    "\t\t\t\t\t\t\t\t\tvcenter=0,\n",
+    "\t\t\t\t\t\t\t\t\tvmax=maxvalue)#A_flat.max())\n",
+    "\t\t\t\tsc = ax.scatter(\n",
+    "\t\t\t\t\tT0.reshape(-1),\n",
+    "\t\t\t\t\tT1.reshape(-1),\n",
+    "\t\t\t\t\tc=A_flat,\n",
+    "\t\t\t\t\ts=100,\n",
+    "\t\t\t\t\tcmap='Spectral',\n",
+    "\t\t\t\t\tnorm = norm\n",
+    "\t\t\t\t)\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tsc = ax.scatter(\n",
+    "\t\t\t\t\tT0.reshape(-1),\n",
+    "\t\t\t\t\tT1.reshape(-1),\n",
+    "\t\t\t\t\tc=A_flat,\n",
+    "\t\t\t\t\ts=100,\n",
+    "\t\t\t\t\tcmap='Spectral',\n",
+    "\t\t\t\t\t#norm = norm\n",
+    "\t\t\t\t)\t\t\t\t\n",
     "\n",
-    "        # labels & title\n",
-    "        ax.set_title(f\"{key}, th'0={thd0:.2f}, th'1={thd1:.2f}\")\n",
-    "        ax.set_xlabel(\"th0\")\n",
-    "        ax.set_ylabel(\"th1\")\n",
+    "\t\t\t# make the plot\n",
+    "\t\t\t\n",
+    "\t\t\t\n",
     "\n",
-    "        fig.tight_layout()\n",
-    "        plt.show()\n"
+    "\t\t\t# add colorbar\n",
+    "\t\t\tcbar = fig.colorbar(sc, ax=ax)\n",
+    "\n",
+    "\t\t\t# labels & title\n",
+    "\t\t\tax.set_title(f\"{key}, k0={k0.item()}, k1={k1.item()}\")\n",
+    "\t\t\tax.set_xlabel(\"th0\")\n",
+    "\t\t\tax.set_ylabel(\"th1\")\n",
+    "\n",
+    "\t\tfig.tight_layout()\n",
+    "\t\tplt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
