--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -10,9 +10,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.insert(0, os.path.abspath(\"../..\"))\n",
-    "for item in sys.path:\n",
-    "\tprint(item)"
+    "sys.path.insert(0, os.path.abspath(\"../..\"))"
    ]
   },
   {
@@ -754,6 +752,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib.patches import Circle\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
