Add save_loss and load_loss functions

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -486,6 +486,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "97acc686",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_loss(train_losses, val_losses, save_loss_path):\n",
+    "\tlosses_dict = {\n",
+    "\t\t\"train\": train_losses,\n",
+    "\t\t\"val\": val_losses\n",
+    "\t}\n",
+    "\t\n",
+    "\ttorch.save(losses_dict, save_loss_path)\n",
+    "\tprint(\"Saved losses to {save_loss_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81c66e19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_loss(load_loss_path):\n",
+    "    losses_dict = torch.load(load_loss_path, map_location = \"cpu\")\n",
+    "    return losses_dict[\"train\"], losses_dict[\"val\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "74d44a37",
    "metadata": {},
    "outputs": [],
