Add new code for 2d scatter plot calls

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -586,6 +586,24 @@
     "\t\t\tprint(\"Percentage of abs(M_01) < 0.2:\", 100 * np.sum(np.abs(M_th_cpu[:, 0, 1]) < 0.2)/M_th_cpu[:, 0, 1].size, \"%\")\n",
     "\t\t\tprint(\"Percentage of abs(M_11) > 1.0:\", 100 * np.sum(np.abs(M_th_cpu[:, 1, 1]) > 1.0)/M_th_cpu[:, 1, 1].size, \"%\")\n",
     "\n",
+    "\t\t\tplotting_3d = False\n",
+    "\t\t\tplotting_2d = True\n",
+    "\t\t\tif plotting_3d:\n",
+    "\t\t\t\tplotters_simple.plot_3d_quad(q, [theta_ana[:, 0], theta[:, 0], theta_ana[:, 1], theta[:, 1]], \"Analytic vs learned theta\", \n",
+    "\t\t\t\t\t\t\t\t\t\t\t[\"th0_ana\", \"th0_learned\", \"th_1_ana\", \"th_1_learned\"], \"q_0\", \"q_1\", \"th\", folder_path)\n",
+    "\t\t\t\tplotters_simple.plot_3d_double(q, [A_th[:, 0], A_th[:, 1]], \"Input decoupling\", [\"A0\", \"A1\"], \"q_0\", \"q_1\", \"A\", folder_path)\n",
+    "\t\t\t\tplotters_simple.plot_3d_quad(q, [M_th[:, 0, 0], M_th[:, 0, 1], M_th[:, 1, 0], M_th[:, 1, 1]], \"M_th vs q\", \n",
+    "\t\t\t\t\t\t\t\t\t\t [\"M_th[0,0]\", \"M_th[0,1]\", \"M_th[1,0]\", \"M_th[1,1]\"], \"q_0\", \"q_1\", \"M_th\", folder_path)\n",
+    "\t\t\t\t#plotters_simple.plot_3d_double(q, J_h_ana[:, 0, 0], J_h[:, 0, 1], \"J_h\", \"00\", \"01\", \"q_0\", \"q_1\", \"J_h\", device)\n",
+    "\t\t\t\t#plotters_simple.plot_3d_double(q, J_h_ana[:, 1, 0], J_h[:, 1, 1], \"J_h\", \"10\", \"11\", \"q_0\", \"q_1\", \"J_h\", device)\t\t\t\n",
+    "\t\t\t\n",
+    "\t\t\tif plotting_2d:\n",
+    "\t\t\t\tplotters_simple.plot_2d_double(q, [A_th[:, 0], A_th[:, 1]], \"Input matrix terms\", [r\"$A_{0}$\", r\"$A_{1}$\"], r\"$q_0$\", r\"$q_1$\", r\"$A$\", folder_path)\n",
+    "\t\t\t\tplotters_simple.plot_2d_quad(q, [M_th[:, 0, 0], M_th[:, 0, 1], M_th[:, 1, 0], M_th[:, 1, 1]], r\"$M_{\\theta}$\" + \" vs \" + r\"$q$\", \n",
+    "\t\t\t\t\t\t\t\t\t\t [r\"$M_{\\theta_{0,0}}$\", r\"$M_{\\theta_{0,1}}$\", r\"$M_{\\theta_{1,0}}$\", r\"$M_{\\theta_{1,1}}$\"], r\"$q_{0}$\", r\"$q_{1}$\", \"M_th\", folder_path)\n",
+    "\t\t\t\t\n",
+    "\t\t\t\n",
+    "\n",
     "\n",
     "\t\t"
    ]
