Call the save_loss function, move others

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -643,6 +643,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "59aa49c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_model(model, nn_filepath)\n",
+    "save_loss_path = dir_path + \"/losses.pt\"\n",
+    "save_loss(train_losses, val_losses, save_loss_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ec749cee",
    "metadata": {},
    "outputs": [],
@@ -650,9 +662,7 @@
     "points_path = os.path.join(dir_path, \"training_points_\" + str(file_counter) + \".png\")\n",
     "points_plotter(shifted_points, save = True, file_path = points_path)\n",
     "scatter_fig_path = os.path.join(dir_path, \"loss_\" + str(file_counter) + \".png\")\n",
-    "plot_loss(train_losses, val_losses, log = True, save = True, file_path = scatter_fig_path)\n",
-    "save_model(model, nn_filepath)\n",
-    "print(nn_filepath)"
+    "plot_loss(train_losses, val_losses, log = True, save = True, file_path = scatter_fig_path)"
    ]
   },
   {
