Change plotting font and names

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -802,11 +802,22 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
+    "\n",
+    "plt.rcParams.update({\n",
+    "\t'font.size':       16,   # base font size for text\n",
+    "\t'axes.titlesize':  14,   # title of each subplot\n",
+    "\t'axes.labelsize':  14,   # x/y axis labels\n",
+    "\t'xtick.labelsize': 12,   # x‐tick labels\n",
+    "\t'ytick.labelsize': 12,   # y‐tick labels\n",
+    "\t'legend.fontsize': 14,   # legend text (if you had one)\n",
+    "\t'figure.titlesize': 18,  # suptitle\n",
+    "})\n",
+    "\n",
     "#\"Models\", dir_name, dir_name + \"_\" + str(file_counter-1) + \".pth\")\n",
     "model_ana = autoencoders.Analytic_transformer(rp)\n",
     "\n",
     "models = [model_ana, model]\n",
-    "model_names = [\"Analytic\", \"Neural Network\"]\n",
+    "model_names = [\"Analytic\", \"Learned\"]\n",
     "dir_path = dir_path\n",
     "file_counter = 0\n",
     "\n",
