Load model for vis currently None

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -813,6 +813,21 @@
     "\t'figure.titlesize': 18,  # suptitle\n",
     "})\n",
     "\n",
+    "\n",
+    "try:\n",
+    "\tdir_name\n",
+    "except NameError:\n",
+    "\tdir_name = \"NN_202505141642(half-q)\"\n",
+    "\n",
+    "\tdir_path = os.path.join(os.getcwd(), \"Models\", dir_name)\n",
+    "\tnn_filename = \"NN_202505141642\" + \"_0.pth\"\n",
+    "\tnn_filepath = os.path.join(dir_path, nn_filename)\n",
+    "\n",
+    "\tmodel_path = nn_filepath\n",
+    "\tmodel = autoencoders.Autoencoder_double(rp).to(device)  # Initialize model architecture\n",
+    "\tmodel.load_state_dict(torch.load(model_path, weights_only=True, map_location=device))  # Load weights\n",
+    "\n",
+    "\n",
     "#\"Models\", dir_name, dir_name + \"_\" + str(file_counter-1) + \".pth\")\n",
     "model_ana = autoencoders.Analytic_transformer(rp)\n",
     "\n",
