Add circle to yin yang plot

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -913,19 +913,21 @@
     "\n",
     "\t\t\tfor j in range(2):\n",
     "\t\t\t\t\tsc = axes[i, j].scatter(x_end_ccw, y_end_ccw, c=thetas[j], cmap='viridis', s=5)\n",
-    "\t\t\t\t\taxes[i, j].set_title(\"th_\" + str(j) + \" - \" + model_names[i])\n",
+    "\n",
+    "\t\t\t\t\tcircle = Circle((0.0, 0.0),\n",
+    "\t\t\t\t\t\t\t\t\tl_total*1.01,\n",
+    "\t\t\t\t\t\t\t\t\tfill=False,\n",
+    "\t\t\t\t\t\t\t\t\tlinestyle='--',\n",
+    "\t\t\t\t\t\t\t\t\tedgecolor='k',\n",
+    "\t\t\t\t\t\t\t\t\tlinewidth=1.0)\n",
+    "\t\t\t\t\taxes[i, j].add_patch(circle)\t\t\t\t\t\n",
+    "\t\t\t\t\taxes[i, j].set_title(r\"$\\theta_{\" + str(j) + \"}$\" + \" - \" + model_names[i])\n",
     "\t\t\t\t\taxes[i, j].set_xlabel(\"x\")\n",
     "\t\t\t\t\taxes[i, j].set_ylabel(\"y\")\n",
-    "\t\t\t\t\tplt.colorbar(sc, ax=axes[i, j])\n",
-    "\t\t\t\t\taxes[i, j].set_xlim((-l_total, l_total))\n",
-    "\t\t\t\t\taxes[i, j].set_ylim((-l_total, l_total))\n",
-    "\n",
-    "\n",
-    "\t\t\t#sc4 = axes[1].scatter(x_end_ccw, y_end_ccw, c=theta2_ccw, cmap='viridis', s=5)\n",
-    "\t\t\t#axes[1].set_title(\"Theta1 - Counterclockwise\")\n",
-    "\t\t\t#axes[1].set_xlabel(\"x\")\n",
-    "\t\t\t#axes[1].set_ylabel(\"y\")\n",
-    "\t\t\t#plt.colorbar(sc4, ax=axes[1])\n",
+    "\t\t\t\t\tcbar = plt.colorbar(sc, ax=axes[i, j])\n",
+    "\t\t\t\t\tcbar.set_label(r'$\\theta$', fontsize=14)\n",
+    "\t\t\t\t\taxes[i, j].set_xlim((-l_total*1.02, l_total*1.02))\n",
+    "\t\t\t\t\taxes[i, j].set_ylim((-l_total*1.02, l_total*1.02))\n",
     "\n",
     "\tplt.tight_layout()\n",
     "\tplt.savefig(theta_xy_fig_path)\n",
